# circuit_migrations

./: LICENSE  README.md
maintenances/: pyproject.toml
maintenances/maintenances/: cust_nap.xml  data.yaml  maintenances.py  test.py  test.txt
maintenances/maintenances/custom_napalm/: __init__.py  iosxr.py  junos.py
maintenances/maintenances/custom_napalm/utils/: junos_cust_views.py  junos_cust_views.yml
maintenances/maintenances/lib/: cisco.py  devices.py  getters.py  juniper.py  parsers.py
maintenances/maintenances/outputs/: arp.json  bgp.json  bgp_test.json  client_secret.json  comb_dict.json  comb_dict2.json  int.json  ip_int.json  ip_int.txt  isis.json  nd.json  optics.json  sheets.googleapis.com-python.json  test.json  test_int.json  tests.py
maintenances/maintenances/outputs_wip/: tests.py
maintenances/maintenances/schemas/: data_circuit_schema.py  schemas.py
maintenances/maintenances/utils/: checks.py  gsheets.py  logins.py  schemas.py
maintenances/tests/: test_maintenances.py
